--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -11,6 +11,7 @@
   --black-700: #0e161d;
   --black-800: #0d131a;
   --black-900: #070b0e;
+  --black: #000;
 
   --gray-25: #fcfcfc;
   --gray-50: #fbfbfb;
