--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,10 @@
 header {
+  position: fixed;
+  z-index: 10;
   width: 100%;
   height: 104px;
-  z-index: 1000;
   opacity: 0.98;
+  background-color: var(--gray-25);
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
@@ -83,29 +85,59 @@ header img:hover {
 
 /* -- section home -- */
 .s-hero-home {
+  display: flex;
   width: 100%;
-  height: 90vh;
-  background-image: url(../imgs/bg-home-2.png);
-  background-size: cover;
-  background-position: right;
-  background-repeat: no-repeat;
+  height: 730px;
+  padding: 30px 0px;
+  align-items: flex-start;
 }
 
 .s-hero-home .container {
   position: relative;
   display: flex;
+  /* width: 1280px;*/
   height: 100%;
+  padding: 0px 32px;
   justify-content: space-between;
   align-items: center;
+  flex-shrink: 0;
 }
 
 .wrapper-home {
-  position: absolute;
-  bottom: 200px;
-  left: 15rem;
+  display: flex;
+  width: 758px;
+  height: 380px;
+  padding: 20px 0px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 48px;
+  flex-shrink: 0;
+}
+
+.text-content-home {
   display: flex;
   flex-direction: column;
-  gap: 200px;
+  align-items: flex-start;
+  gap: 32px;
+  align-self: stretch;
+}
+
+.wrapper-profile {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 515px;
+  height: 515px;
+}
+
+.wrapper-profile img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .text-content-home .span-home-h1 {
@@ -123,6 +155,9 @@ header img:hover {
   display: flex;
   margin-left: 20rem;
   gap: 5rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .social-contact img {
@@ -140,12 +175,23 @@ header img:hover {
 
 /*-- section skills --*/
 .s-hero-skills {
-  height: 100vh;
-  align-self: stretch;
+  display: flex;
+  width: 100%;
+  padding: 60px 80px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .s-hero-skills .container {
-  width: 100%;
+  display: flex;
+  width: 1280px;
+  max-width: 100%;
+  padding: 0px 32px;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: stretch;
+  gap: 20px;
 }
 
 .span-skills {
@@ -160,12 +206,15 @@ header img:hover {
   justify-content: center;
 }
 
-.wrapper-skills {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 4rem;
+.wrapper-colum1,
+.wrapper-colum2 {
   width: 100%;
-  justify-items: center;
+  max-width: 100%;
+  display: flex;
+  padding: 20px 0px;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .card-skills {
@@ -173,6 +222,7 @@ header img:hover {
   height: 210px;
   display: flex;
   padding: 24px;
+  margin: 2%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -195,14 +245,11 @@ header img:hover {
 
 /* -- section experience -- */
 .s-hero-experience {
-  min-width: 100%;
-  height: 1200px;
+  width: 100%;
+  /*height: 1200px;*/
+  max-height: 100%;
   padding: 60px 80px;
   background-color: var(--black-900);
-}
-
-.sh-experience {
-  color: var(--gray-25);
 }
 
 .wrapper-experience {
@@ -265,23 +312,27 @@ header img:hover {
 /* -- section about-me -- */
 .s-hero-about {
   display: flex;
-  align-self: stretch;
   width: 100%;
   padding: 60px 0px;
 }
+
 .wrapper-about {
   display: flex;
   width: 100%;
   padding: 0px 32px;
   justify-content: space-between;
   align-items: center;
-  align-self: stretch;
 }
 
 .wrapper-about img {
-  height: 70%;
   border-radius: 42px;
-  align-self: stretch;
+  filter: invert(50%);
+  filter: grayscale(100%);
+}
+
+.wrapper-about img:hover {
+  filter: grayscale(0%);
+  cursor: wait;
 }
 
 .box-content-about {
@@ -296,6 +347,7 @@ header img:hover {
 }
 
 .text-content-about h3 {
+  font-size: 1.4rem;
   margin-bottom: 20px;
 }
 
@@ -317,11 +369,12 @@ header img:hover {
   gap: 40px;
   align-self: stretch;
   justify-content: space-between;
+  margin: 40px 0;
+
   box-shadow: #000 0px 7px 29px 0px;
+  transition: ease 0.4s;
   border-radius: 10px;
   border: 1px solid var(--black-800);
-  margin: 20px 0;
-  background-color: var(--black-400);
 }
 
 .card-project img {
@@ -340,14 +393,22 @@ header img:hover {
 }
 
 .card-project a {
+  display: inline-flex;
+  align-items: end;
   color: var(--gray-25);
-  border-bottom: 1px solid var(--gray-25);
   transition: ease 0.4s;
+  padding: 0.05rem 0.5rem;
+  margin: 0.5rem;
 }
 
-.card-project a:hover {
-  color: var(--gray-900);
-  border-bottom: 1px solid var(--gray-900);
+#link-auclan-design {
+  border-bottom: 1px solid var(--gray-700);
+  transition: ease 0.4s;
+  filter: grayscale(100%);
+}
+
+#link-auclan-design:hover {
+  filter: grayscale(0%);
 }
 
 .box-content-project {
@@ -362,4 +423,54 @@ header img:hover {
   width: 20px;
   height: 20px;
   flex-shrink: 0;
+}
+
+.box-content-project img:hover {
+  filter: grayscale(50%);
+}
+
+footer {
+  position: relative;
+  background-color: var(--black);
+  display: flex;
+  width: 100%;
+  height: 314px;
+  padding: 24px 80px;
+  box-shadow: 0 0 10px 2px var(--gray-800);
+  align-items: center;
+}
+
+.wrapper-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.logo-footer {
+  width: 180px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.logo-footer:hover {
+  transform: translateY(2px);
+}
+
+.social-footer {
+  display: flex;
+  gap: 32px;
+}
+
+.social-footer img {
+  filter: grayscale(100%);
+}
+
+.social-footer img:hover {
+  cursor: pointer;
+  filter: brightness(100%);
+}
+
+.social-footer #logo-X:hover {
+  border-radius: 5px;
 }
